# SDF_CAD

./: .dockerignore  .gitignore  README.md  docker-compose.yml
.vite/vitest/: results.json
backend/: .dockerignore  Dockerfile  README.md  pyproject.toml  requirements.txt
backend/app/: cache.py  dsl.py  evaluator.py  gpu_memory.py  gpu_program.py  grid_shape.py  main.py  mesh_upload.py  meshing.py  models.py  optimization.py  sample_scene.sdf  sparse_field.py  structural_progress.py  worker.py  worker_tasks.py
backend/scripts/: benchmark_mesh_upload.py  benchmark_preview_matrix.py
backend/tests/: test_api.py  test_architecture.py  test_evaluator.py  test_memory_cleanup.py  test_mesh_upload.py  test_meshing.py  test_optimization.py  test_parser.py  test_uploaded_mesh_cache.py
docs/: dsl-field-primer.md  generative-design-physics-pde.md  known issues.md
frontend/: index.html  package-lock.json  package.json  tsconfig.json  vite.config.ts
frontend/src/: App.test.tsx  App.tsx  styles.css  types.ts
frontend/src/components/: Viewer.test.tsx  Viewer.tsx
frontend/src/lib/: api.test.ts  api.ts  localMeshPreview.ts  meshGeometry.test.ts  meshGeometry.ts
plans/: codebase-analysis-and-performance.md  lattice-params-mm-units-ux-plan.md  memory-audit-plan.md  option-c-preprocess-endpoint-plan.md
