[build-system]
requires = ["hatchling>=1.25.0"]
build-backend = "hatchling.build"

[project]
name = "sdf-cad-backend"
version = "0.1.0"
description = "Local-first backend for implicit SDF modeling"
requires-python = ">=3.11"
dependencies = [
  "fastapi>=0.115.0",
  "uvicorn[standard]>=0.30.0",
  "celery>=5.4.0",
  "redis>=5.0.0",
  "numpy>=1.26.0",
  "scipy>=1.12.0",
  "numba>=0.60.0",
  "scikit-image>=0.24.0",
  "python-multipart>=0.0.9",
  "lark>=1.2.2",
  "pydantic>=2.8.0"
]

[project.optional-dependencies]
dev = [
  "pytest>=8.2.0",
  "httpx>=0.27.0"
]
gpu = [
  "cupy-cuda12x>=14.0.0; platform_system == 'Linux' and platform_machine == 'x86_64'",
  "nvidia-cublas-cu12>=12.0.0; platform_system == 'Linux' and platform_machine == 'x86_64'",
  "nvidia-cuda-cupti-cu12>=12.0.0; platform_system == 'Linux' and platform_machine == 'x86_64'",
  "nvidia-cuda-nvrtc-cu12>=12.0.0; platform_system == 'Linux' and platform_machine == 'x86_64'",
  "nvidia-cuda-runtime-cu12>=12.0.0; platform_system == 'Linux' and platform_machine == 'x86_64'",
  "nvidia-cudnn-cu12>=9.0.0; platform_system == 'Linux' and platform_machine == 'x86_64'",
  "nvidia-cufft-cu12>=11.0.0; platform_system == 'Linux' and platform_machine == 'x86_64'",
  "nvidia-curand-cu12>=10.0.0; platform_system == 'Linux' and platform_machine == 'x86_64'",
  "nvidia-cusolver-cu12>=11.0.0; platform_system == 'Linux' and platform_machine == 'x86_64'",
  "nvidia-cusparse-cu12>=12.0.0; platform_system == 'Linux' and platform_machine == 'x86_64'",
  "nvidia-cusparselt-cu12>=0.6.0; platform_system == 'Linux' and platform_machine == 'x86_64'",
  "nvidia-nccl-cu12>=2.0.0; platform_system == 'Linux' and platform_machine == 'x86_64'",
  "nvidia-nvjitlink-cu12>=12.0.0; platform_system == 'Linux' and platform_machine == 'x86_64'",
  "nvidia-nvtx-cu12>=12.0.0; platform_system == 'Linux' and platform_machine == 'x86_64'"
]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["."]

[tool.hatch.build.targets.wheel]
packages = ["app"]
